--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,11 +122,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm test
-      - save_cache:
-          paths: [backend/node_modules]
-          key: backend-dependencies    
-
+            npm audit --audit-level=critical
 #   deploy-infrastructure:
 #     docker:
 #       # Docker image here that supports AWS CLI
