add config infrastructure job & config server

--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -20,9 +20,10 @@
       # Your code here
 
   # Get the environment variables from CircleCI and add to the EC2 instance
-  environment:
-    - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
+  # environment:
+  #   - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"  
     # Add more env vars here
 
   roles:
-    # Your code here
+    - configure-server
+    - configure-prometheus-node-exporter
