--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,27 +1,24 @@
 ---
-- name: "Copy Backend app directory"
-  file:
-    path: ~/backend-app
-    state: directory
+- name: "Copy Backend file"
+  copy:
+    src: artifact.tar.gz
+    dest: /home/ubuntu
 
 - name: "Unarchive backend file"
-  unarchive:
-    src: artifact.tar.gz
-    dest: ~/backend-app
-- name: "Installing Node Dependencies"
+  ansible.builtin.shell: tar -xzf artifact.tar.gz
+  args:
+    chdir: /home/ubuntu
+
+- name: "installing node"
   shell: |
-    cd ~/backend-app
-    npm i 
-- name: "Executing Node with pm2"
+      cd /home/ubuntu/backend
+      npm i
+- name: "excuting with pm"
   shell: |
-    cd ~/backend-app/dist
-    pm2 stop default
-    pm2 start main.js
-  register: execute_node
-- name: print message
-  debug:
-   msg:"{{execute_node.stdout_lines }}"     
-- name: "pm2 service start"
+      cd /home/ubuntu/backend/dist
+      pm2 stop default
+      pm2 start main.js
+- name: "pm2 server start"
   become: true
   shell: |
     env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
