--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -16,7 +16,9 @@
 - name: "excuting with pm"
   shell: |
       cd /home/ubuntu/backend/dist
+      npm install
       pm2 stop default
+      pm2 start npm -- start
       pm2 start main.js
 - name: "pm2 server start"
   become: true
