--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -15,11 +15,15 @@
       npm i
 - name: "excuting with pm"
   shell: |
-      cd /home/ubuntu/backend/dist
-      npm install
-      pm2 stop default
-      pm2 start npm -- start
-      pm2 start main.js
+      cd /home/ubuntu/backend
+      curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+      sudo apt install -y nodejs
+      sudo npm install -g
+      npm@latest
+      sudo npm install -g webpack-dev-server
+      sudo npm install
+      sudo npm run build
+      sudo pm2 start npm --name backend -- start
 - name: "pm2 server start"
   become: true
   shell: |
