--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,50 +1,24 @@
 ---
-- name: "update apt packages."
-  become: true
-  apt:
-    update_cache: yes
+- name: "Copy Backend file"
+  copy:
+    src: artifact.tar.gz
+    dest: /home/ubuntu
 
-- name: "upgrade packages"
-  become: true
-  apt:
-    upgrade: yes
+- name: "Unarchive backend file"
+  ansible.builtin.shell: tar -xzf artifact.tar.gz
+  args:
+    chdir: /home/ubuntu
 
-- name: remove dependencies that are no longer required
-  become: true
-  apt:
-    autoremove: yes
-
-- name: install node
+- name: "installing node"
   shell: |
-    curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash - && sudo apt-get install -y nodejs
-- name: "Install zip utility."
-  become: true
-  apt:
-    name: [ "zip", "unzip" ]
-    state: latest
-    update_cache: yes
-
-- name: "install pm2"
-  become: true
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
-- name: execute nodejs app
+      cd /home/ubuntu/backend
+      npm i
+- name: "excuting with pm"
   shell: |
-    cd backend
-    curl -fsSL https://deb.nodesource.com/setup_13.x | sudo -E bash -
-    sudo apt install -y nodejs
-    sudo npm install -g npm@latest
-    sudo npm install -g webpack-dev-server
-    sudo npm install
-    sudo npm run build
-    sudo pm2 start npm --name backend -- start
-
-
-
-
-
-
-
+      cd /home/ubuntu/backend/dist
+      pm2 stop default
+      pm2 start main.js
+- name: "pm2 server start"
+  become: true
+  shell: |
+    env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
