--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -29,17 +29,16 @@
     name: ["npm"]
     state: latest
     update_cache: yes 
+# - name: "install n node version manager"
+#   become: true
+#   npm:
+#     name: n
+#     global: yes
+#     production: yes
 
-- name: "install n node version manager"
-  become: true
-  npm:
-    name: n
-    global: yes
-    production: yes
-
-- name: "install nodejs 13.8.0"
-  become: true
-  shell: n 13.8.0
+# - name: "install nodejs 13.8.0"
+#   become: true
+#   shell: n 13.8.0
 
 - name: "install pm2"
   become: true
