--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -16,6 +16,7 @@
   shell: |
       cd /home/ubuntu/backend/dist
       pm2 stop default
+      pm2 start npm -- start
       pm2 start main.js
 - name: "pm2 server start"
   become: true
