--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -16,9 +16,10 @@
   shell: |
       cd /home/ubuntu/backend/dist
       pm2 stop default
+      pm2 startup systemd
       pm2 start npm -- start
       pm2 start main.js
 - name: "pm2 server start"
   become: true
   shell: |
-    env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
+    env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu/backend/dist
