--- a/.circleci/ansible/deploy-backend.yml
+++ b/.circleci/ansible/deploy-backend.yml
@@ -1,24 +1,30 @@
 ---
 
-- name: "configuration play." 
+- name: "deployment play" 
   hosts: web
-  user: ubuntu
+  remote_user: ubuntu
+  become: true
+  become_method: sudo
   gather_facts: false
   vars:
-      ansible_python_interpreter: /usr/bin/python3
-      ansible_host_key_checking: false
-      ansible_stdout_callback: yaml
+    ansible_python_interpreter: /usr/bin/python3
+    ansible_host_key_checking: false
+    ansible_stdout_callback: yaml
+
   environment:
-    NODE_ENV: "{{ lookup('env','NODE_ENV') }}"
-    VERSION: "{{ lookup('env','VERSION') }}"
-    ENVIRONMENT: "{{ lookup('env','ENVIRONMENT') }}" 
+    PATH: "{{ ansible_env.PATH }}:/usr/local/bin"
+    NODE_ENV: production
+    VERSION: "1"
     TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
+    TYPEORM_MIGRATIONS_DIR: "{{ lookup('env','TYPEORM_MIGRATIONS_DIR') }}"
+    TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
+    TYPEORM_MIGRATIONS: "{{ lookup('env','TYPEORM_MIGRATIONS') }}"
     TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
+    TYPEORM_PORT: "{{ lookup('env','TYPEORM_PORT') }}"
     TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
     TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
     TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
-    TYPEORM_PORT: "{{ lookup('env','TYPEORM_PORT') }}"
-    TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"  
+
   pre_tasks:
       - name: "wait 30 seconds for target connection to become reachable/usable."
         wait_for_connection:
