--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -316,6 +316,7 @@ jobs:
             export TYPEORM_MIGRATIONS=./migrations/*.ts
             cd .circleci/ansible
             ansible-playbook -i inventory.txt deploy-backend.yml
+
       - destroy-environment
       - revert-migrations
   smoke-test:
@@ -425,8 +426,8 @@ workflows:
       #         only: [main]
       - configure-infrastructure:
            requires: [deploy-infrastructure]
-      - run-migrations:
-           requires: [configure-infrastructure]
+      # - run-migrations:
+      #      requires: [configure-infrastructure]
       - deploy-frontend:
           requires: [configure-infrastructure]
       - deploy-backend:
