--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -383,47 +383,43 @@ jobs:
       - revert-migrations
   cleanup:
       docker:
-        - image: cimg/base:2022.04 
+        - image: cimg/base:2020.01
       steps:
         - checkout
-        - install_awscli
-        - attach_workspace:
-            at: ~/
+        - aws-cli/setup
         - run:
-            name: Remove the old stacks from our production phase
+            name: Remove old stacks and files
             command: |
-              export STACKS=($(aws cloudformation list-stacks \ 
-                --query "StackSummaries[*].StackName" \
+              export OldWorkflowID=$(aws cloudformation \
+                list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                --no-paginate --output text)
+              export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                 --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
-              echo Stack names: "${STACKS[@]}"
-              export OldWorkflowID=$(curl --insecure https://kvdb.io/2bqfdFsNU2jCvgyEVGiGHF/success_/Old_Workflow_ID)
-              echo "The old Workflow_ID: $OldWorkflowID"
-              if [[ "${OldWorkflowID}" =~ "${STACKS[@]}"  ]]
+              echo "Old Workflow ID: ${OldWorkflowID}"
+              if [ "${OldWorkflowID}" != "<< pipeline.parameters.workflow-id >>" ]
               then
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-              else
-                echo "No stacks to be deleted"
               fi
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-          filters:
-            branches:
-              only: [main]
+      # - build-frontend
+      # - build-backend
+      # - test-frontend:
+      #     requires: [build-frontend]
+      # - test-backend:
+      #     requires: [build-backend]
+      # - scan-backend:
+      #     requires: [build-backend]
+      # - scan-frontend:
+      #     requires: [build-frontend]
+      - deploy-infrastructure
+          # requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          # filters:
+          #   branches:
+          #     only: [main]
       - configure-infrastructure:
            requires: [deploy-infrastructure]
       - run-migrations:
@@ -432,9 +428,9 @@ workflows:
           requires: [configure-infrastructure]
       - deploy-backend:
           requires: [configure-infrastructure]
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
+      # - smoke-test:
+      #     requires: [deploy-backend, deploy-frontend]
+      # - cloudfront-update:
+      #     requires: [smoke-test]
       - cleanup:
           requires: [cloudfront-update]
