--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -396,7 +396,7 @@ jobs:
               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                 --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
               echo "Old Workflow ID: ${OldWorkflowID}"
-              if [ "${OldWorkflowID}" != "<< pipeline.parameters.workflow-id >>" ]
+              if [ "${OldWorkflowID}" != "<< pipeline.parameters..workflow_ID >>" ]
               then
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
